# chatgpt_ros_cpp

./: .gitignore  README.md  setup.bash
.github/workflow/: ci_humble.yaml
.github/workflows/: ci_humble.yaml
chatgpt_ros/: CMakeLists.txt  README.md  package.xml
chatgpt_ros/include/chatgpt_ros/: cat_gpt_ros_constants.hpp  chat_gpt_action_server.hpp  utils.hpp
chatgpt_ros/src/: chat_gpt_action_server.cpp
chatgpt_ros_cpp/: CMakeLists.txt  package.xml
chatgpt_ros_cpp/include/chatgpt_ros_cpp/: chatgpt_server.hpp
chatgpt_ros_cpp/launch/: chat.launch.py
chatgpt_ros_cpp/src/: chatgpt_server.cpp
chatgpt_ros_cpp_bringup/: CMakeLists.txt  package.xml
chatgpt_ros_cpp_bringup/launch/: chat.launch.py
chatgpt_ros_cpp_msgs/: CMakeLists.txt  package.xml
chatgpt_ros_cpp_msgs/srv/: ChatgptService.srv
chatgpt_ros_cpp_node/: CMakeLists.txt  package.xml
chatgpt_ros_cpp_node/include/chatgpt_ros_cpp_node/: chatgpt_server.hpp
chatgpt_ros_cpp_node/src/: chatgpt_server.cpp
chatgpt_ros_interface/: CMakeLists.txt  package.xml
chatgpt_ros_msgs/: CMakeLists.txt  package.xml
chatgpt_ros_msgs/action/: ChatgptAction.action
chatgpt_ros_msgs/srv/: ChatgptService.srv
