<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>chatgpt_ros_cpp_node</name>
  <version>0.0.0</version>
  <description>ROS 2 package for ChatGPT API communication</description>
  <maintainer email="takumi1988okamoto@gmail.com">Takumi Okamoto</maintainer>
   <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_components</build_depend>
  <build_depend>std_msgs</build_depend>
  <!-- <build_depend>cpprestsdk</build_depend> -->
  <build_depend>libcpprest-dev</build_depend>
  <build_depend>nlohmann-json-dev</build_depend>
  <build_depend>chatgpt_ros_cpp_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <!-- <exec_depend>cpprestsdk</exec_depend> -->
  <exec_depend>libcpprest-dev</exec_depend>
  <exec_depend>nlohmann-json-dev</exec_depend>
  <exec_depend>chatgpt_ros_cpp_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
